--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-08-17  Sam C. Lin <lincomatic@hotmail.com>
+	* usbasp.c: add support for -P idx:n
+	
 2016-02-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* configure.ac: Released version 6.3.
